Changelog for pdoTools.

2.4.0 pl
==============
- [pdoResources] Faster processing of additional snippet parameters to placeholders.

2.3.5 pl
==============
- [pdoFetch] Added escaping of columns names in query.

2.3.4 pl
==============
- [#200] [pdoFetch] Fixed &sortbyTV with dot in name.

2.3.3 pl
==============
- Added system plugin for "autoload" of main classes with respect to their paths in system settings.

2.3.2 pl
==============
- [#196] [pdoPage] Added workaround to support ClientConfig tags in ajax mode.
- [Fenom] Added general MODX output filters as Fenom modifiers.
- [Fenom] Implemented autoload of modifiers from snippets.
- [Fenom] Removed system setting "pdotools_fenom_modifiers".

2.3.1 pl
==============
- [pdoSitemap] Lightning fast work chunks processing with &scheme=`uri`.
- [Fenom] Improved check of syntax before processing.

2.3.0 pl
==============
- Removed shortcuts from system core.
- PSR-2.
- [Fenom] Added default modifiers: "url" and "lexicon".
- [pdoCrumbs] Changed default chunks to ul -> li.
- [#190] [pdoSitemap] Changed date format to ISO 8601.

2.2.8 pl
==============
- [Fenom] Use modResource::getContent() method to get content of current resource in {$_modx->resource}.

2.2.7 pl
==============
- [pdoPage] Ability to get access to a javascript configs from 3rd party scripts.

2.2.6 pl
==============
- [#184] [Fenom] Updated to version 2.8.2.

2.2.5 pl
==============
- [#182] [pdoTitle] Added passing a parameters into nested pdoCrumbs.
- [pdoSitemap] Added processing of MODX tags if needed.
- Added method pdoTools::makeUrl().
- [#181] New url schema type - "uri".

2.2.4 pl
==============
- [Fenom] Fixed speed issues when MODX snippets are run as Fenom modifiers.
- [pdoUsers] Fixed overwrite modUser.id by modUserProfile.id.

2.2.3 pl
==============
- [pdoPage] Fixed processing of uncached conditions in chunks when ajax mode is enabled.

2.2.2 pl
==============
- [pdoPage] Added new parameter &pageLinkScheme.

2.2.1 pl
==============